feat: add documentation and api integration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "game-session-manager-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@react-input/mask": "^1.2.5",
     "antd": "^5.20.1",
+    "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
